syntax = "proto3";

package models;

option go_package = "github.com/bsanzhiev/taco-delivery/models";

service DeliveryService {
  rpc UpdateDeliveryStatus(DeliveryStatus) returns (DeliveryResponse);
  rpc GetDelivery(DeliveryID) returns (Delivery);
}

message Delivery {
  int64 id = 1;
  int64 orderID = 2;
  string status = 3;
}

message DeliveryID {
  int64 id = 1;
}

message DeliveryStatus {
  int64 id = 1;
  string status = 2;
}

message DeliveryResponse {
  int64 id = 1;
  string status = 2;
}
